<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/andika"
            android:justificationMode="inter_word"
            android:padding="18dp"
            android:text="@string/presentacion"
            android:textColor="@color/colorTxt1">

        </TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <TextView
                android:id="@+id/tv_txt_expe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/expe1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_anios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/expe2"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_expe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GUI2"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:id="@+id/tv_appmovil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/GUI1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_txt_expe" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="146dp"
                android:layout_height="26dp"
                android:layout_marginTop="56dp"
                android:progressDrawable="@drawable/formato_barra"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_appmovil"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>